[gd_scene load_steps=4 format=2]

[ext_resource path="res://tscn/eventDlg/eventBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/eventDlg/eventCheck.gd" type="Script" id=2]
[ext_resource path="res://res/font/b.tres" type="DynamicFont" id=4]

[node name="eventCheck" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="." index="0"]
margin_left = 524.0
margin_top = 33.0
margin_right = 604.0
margin_bottom = 71.0
text = "3"
expand_icon = true

[node name="Label" type="Label" parent="Button" index="0"]
margin_left = -11.0
margin_top = -26.0
margin_right = 88.0
margin_bottom = -4.0
text = "提高%s成功率"
align = 1

[node name="Label2" type="Label" parent="Button" index="1"]
margin_left = 10.0
margin_top = 41.0
margin_right = 72.0
margin_bottom = 63.0
text = "1/1"
align = 1

[node name="perLab" type="Label" parent="." index="1"]
margin_left = 15.0
margin_top = 26.0
margin_right = 136.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "成功率：60%"
valign = 1

[node name="Button3" type="Button" parent="." index="2"]
margin_left = 640.0
margin_top = 32.0
margin_right = 734.0
margin_bottom = 70.0
text = "确定"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
